--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,9 @@ tests/[0-9]*
 pyext/py2/pysairedis.py
 pyext/py3/pysairedis.py
 pyext/pysairedis.py
+
+# Bazel #
+#########
+bazel-*
+# TODO BL: this is only until I figure out a better way to bundle this doxygen
+doxygen_bin
